# ipc2581-to-kicad

./: .gitignore  CMakeLists.txt  README.md
gui/: IPC2581-Converter.command  ipc2581_gui.py  pcb_data.py  pcb_viewer_2d.py  pcb_viewer_3d.py  run_gui.bat  run_gui.sh
odb/: odb_parser.py  odb_to_json.py  pcb_model.py  utils.py
package/: build_macos_app.sh
samples/: SWITCH BOARD.kicad_pcb  led_power_board.kicad_pcb  led_power_board.xml
src/: geometry.cpp  geometry.h  ipc2581_parser.cpp  ipc2581_parser.h  json_export.cpp  json_export.h  json_import.cpp  json_import.h  kicad_writer.cpp  kicad_writer.h  main.cpp  model_mapper.cpp  model_mapper.h  pcb_model.h  project_writer.cpp  project_writer.h  schematic_writer.cpp  schematic_writer.h  utils.cpp  utils.h  vrml_writer.cpp  vrml_writer.h
test/: test_odb.py
